# dbsync

./: .gitignore  LICENSE  pyproject.toml
sw/dbsync/: __init__.py  dbapi.py  dbsync.py
tests/integration/: test_database.py
tests/unit/: test_schema.py
tests/unit/fixtures/: test_basic.json  test_complex.json
